--- a/style.css
+++ b/style.css
@@ -57,6 +57,8 @@ h1, h2{
     padding-left: 25%;
 }
  #game ul li img{
-   width: 90%;
+   width: 70%;
+   cursor: pointer;
+   margin-left: 1rem;
 }
 }
